Source/WebCore/editing/TextManipulationController.cpp
@@ -530,38 +530,28 @@ void TextManipulationController::observeParagraphs(const Position& start, const 
     addItemIfPossible(std::exchange(unitsInCurrentParagraph, { }));
 }
 
-void TextManipulationController::didCreateRendererForElement(Element& element)
+void TextManipulationController::didUpdateContentForNode(Node& node)
 {
-    if (m_manipulatedNodes.contains(element))
+    if (!m_manipulatedNodes.contains(node))
         return;
 
     scheduleObservationUpdate();
 
-    if (is<PseudoElement>(element)) {
-        if (auto* host = downcast<PseudoElement>(element).hostElement())
-            m_elementsWithNewRenderer.add(*host);
+    m_manipulatedNodesWithNewContent.add(node);
+}
+
+void TextManipulationController::didAddOrCreateRendererForNode(Node& node)
+{
+    if (m_manipulatedNodes.contains(node))
+        return;
+
+    scheduleObservationUpdate();
+
+    if (is<PseudoElement>(node)) {
+        if (auto* host = downcast<PseudoElement>(node).hostElement())
+            m_addedOrNewlyRenderedNodes.add(*host);
     } else
-        m_elementsWithNewRenderer.add(element);
-}
-
-void TextManipulationController::didUpdateContentForText(Text& text)
-{
-    if (!m_manipulatedNodes.contains(text))
-        return;
-
-    scheduleObservationUpdate();
-
-    m_manipulatedTextsWithNewContent.add(text);
-}
-
-void TextManipulationController::didCreateRendererForTextNode(Text& text)
-{
-    if (m_manipulatedNodes.contains(text))
-        return;
-
-    scheduleObservationUpdate();
-
-    m_textNodesWithNewRenderer.add(text);
+        m_addedOrNewlyRenderedNodes.add(node);
 }
 
 void TextManipulationController::scheduleObservationUpdate()
@@ -582,21 +572,17 @@ void TextManipulationController::scheduleObservationUpdate()
         controller->m_didScheduleObservationUpdate = false;
 
         HashSet<Ref<Node>> nodesToObserve;
-        for (auto& weakElement : controller->m_elementsWithNewRenderer)
-            nodesToObserve.add(weakElement);
-        controller->m_elementsWithNewRenderer.clear();
-
-        for (auto& text : controller->m_manipulatedTextsWithNewContent) {
+        for (auto& text : controller->m_manipulatedNodesWithNewContent) {
             if (!controller->m_manipulatedNodes.contains(text))
                 continue;
             controller->m_manipulatedNodes.remove(text);
             nodesToObserve.add(text);
         }
-        controller->m_manipulatedTextsWithNewContent.clear();
+        controller->m_manipulatedNodesWithNewContent.clear();
 
-        for (auto& text : controller->m_textNodesWithNewRenderer)
-            nodesToObserve.add(text);
-        controller->m_textNodesWithNewRenderer.clear();
+        for (auto& node : controller->m_addedOrNewlyRenderedNodes)
+            nodesToObserve.add(node);
+        controller->m_addedOrNewlyRenderedNodes.clear();
 
         if (nodesToObserve.isEmpty())
             return;
@@ -615,7 +601,15 @@ void TextManipulationController::scheduleObservationUpdate()
                 commonAncestor = commonInclusiveAncestor<ComposedTree>(*commonAncestor, node.get());
         }
 
-        auto start = firstPositionInOrBeforeNode(commonAncestor.get());
+        Position start;
+        if (auto* element = downcast<Element>(commonAncestor.get())) {
+            // Ensure to include the element in the range.
+            if (canPerformTextManipulationByReplacingEntireTextContent(*element))
+                start = positionBeforeNode(commonAncestor.get());
+        }
+        if (start.isNull())
+            start = firstPositionInOrBeforeNode(commonAncestor.get());
+
         auto end = lastPositionInOrAfterNode(commonAncestor.get());
         controller->observeParagraphs(start, end);
 
@@ -781,6 +775,8 @@ auto TextManipulationController::replace(const ManipulationItemData& item, const
             downcast<HTMLInputElement>(*element).setValue(newValue.toString());
         else
             element->setAttribute(item.attributeName, newValue.toString());
+
+        m_manipulatedNodes.add(*element);
         return std::nullopt;
     }
 
