Source/WebCore/editing/TextManipulationController.h
@@ -115,9 +115,8 @@ public:
     using ManipulationItemCallback = Function<void(Document&, const Vector<ManipulationItem>&)>;
     WEBCORE_EXPORT void startObservingParagraphs(ManipulationItemCallback&&, Vector<ExclusionRule>&& = { });
 
-    void didCreateRendererForElement(Element&);
-    void didCreateRendererForTextNode(Text&);
-    void didUpdateContentForText(Text&);
+    void didUpdateContentForNode(Node&);
+    void didAddOrCreateRendererForNode(Node&);
     void removeNode(Node&);
 
     enum class ManipulationFailureType : uint8_t {
@@ -181,9 +180,10 @@ private:
 
     WeakPtr<Document> m_document;
     WeakHashSet<Element> m_elementsWithNewRenderer;
-    WeakHashSet<Text> m_manipulatedTextsWithNewContent;
     WeakHashSet<Node> m_textNodesWithNewRenderer;
     WeakHashSet<Node> m_manipulatedNodes;
+    WeakHashSet<Node> m_manipulatedNodesWithNewContent;
+    WeakHashSet<Node> m_addedOrNewlyRenderedNodes;
 
     HashMap<String, bool> m_cachedFontFamilyExclusionResults;
 
